@@ -831,3 +831,4 @@ Updated the WordPress installer to version 2.3.3, WordPress MU to 1.3.3, and Joo
 The --quota and --mail-quota parameters to create-user.pl are now optional. If missing the defaults for the domain or template will be used.
 Added the check-config.pl command line script for validating the Virtualmin configuration.
 Apache log files outside a domain's home directory are renamed and deleted when appropriate.
+Hitting Stop in the browser during the creation of a virtual server or some other action will no longer cancel it, which prevents domains from being half created.
